jdk9+ compatiblility